Upgrade to BEAST 2.5 API.